cropping issue fixed
images aren't cropped when making the screen small

--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ span{
 }
 .head img{
     width:100%;
+    height:100%;
     object-fit:cover;
     opacity:0.4;
 }
@@ -364,7 +365,7 @@ span{
 }
 .call img{
     width:100%;
-    height:auto;
+    height:100%;
     opacity:0.4;
 }
 .call .call_title{
